--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>ADVENTURE</title>
+        <title>Health Adda Oils</title>
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -252,7 +252,7 @@
             <div class="contact_us">
                 <form class="cform" action="" method="post">
                     <div class="crow-message">
-                        <h1 class="color">Send us a message</h1>
+                        <h1 class="color">Have some feedback to share? Kindly send us a message</h1>
                         <div></div>
                     </div>
                     <div class="crow-in">
@@ -271,13 +271,10 @@
                     </div>
                     <div class="crow">
                         <div class="ccol-left">
-                            <select name="country" id="country">
-                                <option value="India">India</option>
-                                <option value="Russia">Russia</option>
-                                <option value="usa">USA</option>
-                                <option value="Japan">Japan</option>
-                                <option value="France">France</option>
-                                <option value="Brazil">Brazil</option>
+                            <select name="Location" id="Location">
+                                <option value="HYDERABAD">HYDERABAD</option>
+                                <option value="TADEPALLIGUDEM">TADEPALLIGUDEM</option>
+                                <option value="OTHERS">OTHERS</option>
                             </select>
                         </div>
                     </div>
@@ -295,29 +292,36 @@
                     <input class="crow-s" type="submit" value="Submit" />
                 </form>
                 <div class="cbox">
-                    <div>
-                        <p class="cbox-message">
-                            Prefer some other way ?<br />Reach us by using the
-                            details given below
-                        </p>
-                        <div class="cbox-line"></div>
-                    </div>
+
                     <div class="c_boxx">
-                        <a href="mailto:abc@gmail.com"
+                        <a href="mailto:health.adda.oils@gmail.com"
                             ><i class="fa fa-envelope"></i>
-                            Mail: tourism@adventure.com
+                            health.adda.oils@gmail.com
                         </a>
                     </div>
                     <div class="c_boxx">
                         <a href="tel:+91-12345-67890"
                             ><i class="fa fa-phone"></i>
-                            Phone: (+91) 12345-67890
+                            TADEPALLIGUDEM: (+91) 9866830900
+                        </a>
+                    </div>
+
+                    <div class="c_boxx">
+                        <a href="https://maps.app.goo.gl/WQv9qtkXLNLtYBMW6"
+                            ><i class="fa fa-map-marker"></i>
+                            TADEPALLIGUDEM: Railway Station Rd, Beside Central Bank, Tadepalligudem, Andhra Pradesh, 534101
                         </a>
                     </div>
                     <div class="c_boxx">
-                        <a href="#"
+                        <a href="tel:+91-12345-67890"
+                            ><i class="fa fa-phone"></i>
+                            HYDERABAD: (+91) 7093603760
+                        </a>
+                    </div>
+                    <div class="c_boxx">
+                        <a href="https://maps.app.goo.gl/sPzAQJF6wusfymZP8"
                             ><i class="fa fa-map-marker"></i>
-                            Location: Kolkata,West Bengal,India
+                            HYDERABAD: No Physical Store yet. But you can collect from this location OR order through whatsapp for home delivery. 
                         </a>
                     </div>
                 </div>
@@ -327,36 +331,7 @@
         <!-- up scroll -->
         <i class="arrow"  onclick="topFunction()" id="upbtn"></i>
         <!-- end -->
-        <!--footer-->
-        <section class="footer">
-            <span
-                >Created By Pritam Sarbajna | &#169; 2022 All rights
-                reserved.</span
-            >
-            <div class="social">
-                <li>
-                    <a
-                        href="https://pritam-sarbajna-portfolio.netlify.app/"
-                        target="_blank"
-                        rel="noreferrer"
-                        ><i class="fa fa-globe"></i
-                    ></a>
-                    <a
-                        href="https://github.com/PritamSarbajna"
-                        target="_blank"
-                        rel="noreferrer"
-                        ><i class="fa fa-github"></i
-                    ></a>
-                    <a
-                        href="https://www.linkedin.com/in/pritam-sarbajna-74945821b/"
-                        target="_blank"
-                        rel="noreferrer"
-                        ><i class="fa fa-linkedin-square"></i
-                    ></a>
-                </li>
-            </div>
-        </section>
-        <!--footer-->
+
 
         <script>
             const menuBtn = document.querySelector(".menu-btn");
