--- a/flip.html
+++ b/flip.html
@@ -26,11 +26,11 @@
 	}
 	
 	.card__face--front {
-  		background: red;
+  		background: green;
 	}
 
 	.card__face--back {
-  		background: blue;
+  		background: grey;
   		transform: rotateY( 180deg );
 	}
 	
