--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 
         <header id="home">
             <div class="explore-content">
-                <h2 id="quote">Cook Healthy. Eat Healthy. Be Healthy.</h2>
+                <h2 id="quote">Cook Healthy. Eat Healthy. Be Healthy. </h2>
                 <div class="line"></div>
-                <h1>PURE COLD PRESSED OILS</h1>
+                <h2>Crafting Pure Cold-Pressed Oils for Over 40 Years!! Experience the taste and health benefits of our time-tested tradition. <br /> We toil for pure oil and love what we do. Discover the difference of quality oils, made with care.</h2>
                 <a
                     href="#explore"
                     class="ctn"
@@ -218,13 +218,9 @@
         <!--Explore-->
         <section class="explore" id="explore">
             <div class="explore-content">
-                <h2>Crafting Pure Cold-Pressed Oils for Over 40 Years: Experience the taste and health benefits of our time-tested tradition.</h2>
+                <h1>PURE COLD PRESSED OILS </h1>
                 <div class="line"></div>
-                <p>
-                    We toil for pure oil and love what we do. 
-					Discover the difference of quality oils, made with care.<br /> 
-				
-                </p>
+                <!--p>               </p-->
             </div>
         </section>
         <!--Explore-->
