--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		
+		<meta property="og:title" content="Health Adda Oils" />
+		<meta property="og:description" content="Pure Cold Pressed Oils!! Discover the difference of Quality Oils." />
+		<meta property="og:url" content="https://healthadda.github.io/" />
+		<meta property="og:image" content="./img/GN_small.jpg" />
+
         <title>Health Adda Oils</title>
         <link
             rel="stylesheet"
@@ -30,6 +36,12 @@
         />
         <link rel="manifest" href="/site.webmanifest" />
     </head>
+	
+	
+
+
+	
+	
     <body
         onload='if (window.location.href.substr(window.location.href.length - 6) == "#about") { introAboutLogoTransition(); }'
     >
