--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		
+        <title>Health Adda Oils</title>
+		<meta name="description" content="Pure Cold Pressed Oils!! Discover the difference of Quality Oils." />
 		<meta property="og:title" content="Health Adda Oils" />
 		<meta property="og:description" content="Pure Cold Pressed Oils!! Discover the difference of Quality Oils." />
 		<meta property="og:url" content="https://healthadda.github.io/" />
-		<meta property="og:image" content="./img/GN_small.jpg" />
-
-        <title>Health Adda Oils</title>
+		<meta property="og:image" content="https://drive.google.com/file/d/1iWVHpiUqLUvcRqDGQ2VXVw4GrSjRrOtk/view?usp=sharing" />
+		
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
