--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta property="og:title" content="Health Adda Oils" />
 		<meta property="og:description" content="Pure Cold Pressed Oils!! Discover the difference of Quality Oils." />
 		<meta property="og:url" content="https://healthadda.github.io/" />
-		<meta property="og:image" content="./img/TN2.jpg" />
+		<meta property="og:image" content="./img/GN_small.jpg" />
 		
         <link
             rel="stylesheet"
