--- a/index.html
+++ b/index.html
@@ -157,57 +157,57 @@
                     <article class="card col">
                         <img class="card-img" src="./img/Groundnut_Oil.jpg" />
                         <h4 class="dark">Groundnut Oil</h4>
-                        <p class="font-color"> 320/- per Litre
+                        <p class="font-color"> 340/- per Litre  <br /> 320/- promo price
                         </p>
                     </article>
 
                     <article class="card col">
                         <img src="./img/Coconut_Oil.jpg" />
                         <h4 class="dark">Coconut Oil</h4>
-                        <p class="font-color"> 205/- per 500ml
+                        <p class="font-color"> 215/- per 500ml  <br /> 205/- promo price
                         </p>
                     </article>
                     <article class="card col">
                         <img src="./img/Almond_Oil.jpg" />
                         <h4 class="dark">Almond Oil</h4>
-                        <p class="font-color"> 275/- per 100ml
+                        <p class="font-color"> 300/- per 100ml  <br /> 280/- promo price
                         </p>
                     </article>					
                     <article class="card col">
                         <img src="./img/Safflower_Oil.jpg" />
                         <h4 class="dark">Safflower Oil</h4>
-                        <p class="font-color"> 350/- per Litre
+                        <p class="font-color"> 370/- per Litre  <br /> 350/- promo price
                         </p>
                         
                     </article>
                     <article class="card col">
                         <img src="./img/Sunflower_Oil.jpg" />
                         <h4 class="dark">Sunflower Oil</h4>
-                        <p class="font-color"> 400/- per Litre
+                        <p class="font-color"> 420/- per Litre  <br /> 400/- promo price
                         </p>
                     </article>
 					<article class="card col">
                         <img src="./img/Hulled_White_Sesame_Oil.jpg" />
                         <h4 class="dark">Hulled White Sesame Oil</h4>
-                        <p class="font-color"> 470/- per Litre
+                        <p class="font-color"> 490/- per Litre  <br /> 470/- promo price
                         </p>
                     </article>
                     <article class="card col">
                         <img src="./img/Black_Sesame_Oil.jpg" />
                         <h4 class="dark">Black Sesame Oil</h4>
-                        <p class="font-color"> 430/- per Litre
+                        <p class="font-color"> 450/- per Litre  <br /> 430/- promo price
                         </p>
                     </article>
                     <article class="card col">
                         <img src="./img/Flax_Seed_Oil.jpg" />
                         <h4 class="dark">Flax Seed Oil</h4>
-                        <p class="font-color"> 600/- per Litre
+                        <p class="font-color"> 620/- per Litre  <br /> 600/- promo price
                         </p>
                     </article>
                     <article class="card col">
                         <img src="./img/Kalonji_Oil.jpg" />
                         <h4 class="dark">Kalonji Oil</h4>
-                        <p class="font-color"> 200/- per 100ml
+                        <p class="font-color"> 220/- per 100ml  <br /> 210/- promo price
                         </p>
                     </article>
 
