--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:description" content="Pure Cold Pressed Oils!! Discover the difference of Quality Oils." />
     <meta property="og:url" content="https://healthadda.github.io/testing/" />
     <meta property="og:image" content="image/GN_small.jpg" />
+	<link rel="icon" type="image/png" sizes="16x16" href="image/favicon-16x16.png">
     <link rel="stylesheet" href="style.css">
 </head>
 
