--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:image" content="image/GN_small.jpg" />
 	<link rel="icon" type="image/png" sizes="16x16" href="image/favicon-16x16.png">
     <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body class="">
@@ -38,7 +39,17 @@
             <button onclick="send_handle()">ORDER</button>
         </div>
     </div>
-
+    <div style="text-align: center;">
+        <i class="fa fa-circle" style="font-size:20px;color:white"></i>
+        <h4>CONTACT US</h4>
+        <a href="tel:+917093603760"><i class="fa fa-phone" style="font-size:36px;color:black"></i></a>
+        <i class="fa fa-circle" style="font-size:36px;color:white"></i>
+        <a href="mailto:health.adda.oils@gmail.com"><i class="fa fa-envelope" style="font-size:36px;color:black"></i></a>
+        <i class="fa fa-circle" style="font-size:36px;color:white"></i>
+        <a href="https://maps.app.goo.gl/sPzAQJF6wusfymZP8" target="_blank" rel="noopener noreferrer"><i class="fa fa-map-marker" style="font-size:36px;color:black"></i></a>
+        <i class="fa fa-circle" style="font-size:36px;color:white"></i>
+        <a href="https://wa.me/917093603760?text=Hi!%20Health%20Adda!"><i class="fa fa-whatsapp" style="font-size:36px;color:green"></i></a>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
