--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Redirecting to our new page</title>
-  <meta http-equiv="refresh" content="0; url =https://healthadda.el.r.appspot.com/" />
+  <title>Health Adda Oils</title>
+  <meta http-equiv="refresh" content="1000; url =https://healthadda.el.r.appspot.com/" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Pure Cold Pressed Oils!! Discover the difference of Quality Oils." />
+  <meta property="og:title" content="Health Adda Oils" />
+  <meta property="og:description" content="Pure Cold Pressed Oils!! Discover the difference of Quality Oils." />
+  <meta property="og:url" content="https://healthadda.github.io/" />
+  <meta property="og:image" content="GN.jpg" />
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
 </head>
 
 <<body>
